<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomRandom"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="2"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        
        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/enter"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textShortMessage"
            android:autofillHints="@string/enter"
            android:background="@drawable/bg_edit"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addBtn"
            android:textSize="20sp"
            android:background="@drawable/bg_button"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        
    </LinearLayout>
    

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_button"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>


    <TextView
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerView"/>
    
</LinearLayout>